exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      >
        <animate
          attributeName="opacity"
          begin="indefinite"
          dur="0.2"
          fill="freeze"
          to="1"
        ></animate>
      </polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_clone #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_2"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_rotation #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
      <polygon
        class="svg_2_class"
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_2_id"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
        transform="rotate(25 320 163.634)"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_blur #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
      <polygon
        class="svg_2_class"
        cx="300"
        cy="150"
        fill="#FF0000"
        filter="url(#svg_2_id_blur)"
        id="svg_2_id"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
        transform="rotate(25 320 163.634)"
      ></polygon>
    </g>
    <defs>
      <filter height="200%" id="svg_2_id_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_opacity #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
      <polygon
        class="svg_2_class"
        cx="300"
        cy="150"
        fill="#FF0000"
        filter="url(#svg_2_id_blur)"
        id="svg_2_id"
        opacity="0.5"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
        transform="rotate(25 320 163.634)"
      ></polygon>
    </g>
    <defs>
      <filter height="200%" id="svg_2_id_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_bring_to_back #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        class="svg_2_class"
        cx="300"
        cy="150"
        fill="#FF0000"
        filter="url(#svg_2_id_blur)"
        id="svg_2_id"
        opacity="0.5"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
        transform="rotate(25 320 163.634)"
      ></polygon>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
    </g>
    <defs>
      <filter height="200%" id="svg_2_id_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_bring_to_front #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
      <polygon
        class="svg_2_class"
        cx="300"
        cy="150"
        fill="#FF0000"
        filter="url(#svg_2_id_blur)"
        id="svg_2_id"
        opacity="0.5"
        orient="point"
        point="5"
        points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
        transform="rotate(25 320 163.634)"
      ></polygon>
    </g>
    <defs>
      <filter height="200%" id="svg_2_id_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_delete #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_align_to_page #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 637.5,129.39886474609375 595.2308044433594,156.86705017089844 613.2818908691406,203.93446350097656 574.0962219238281,172.22222900390625 534.9105529785156,203.93446350097656 552.9616394042969,156.86705017089844 510.6924591064453,129.39886474609375 561.0343322753906,132.0218505859375 574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="5"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_stroke_width #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#FF0000"
        id="svg_1"
        orient="point"
        point="5"
        points="574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 637.5,129.39886474609375 595.2308044433594,156.86705017089844 613.2818908691406,203.93446350097656 574.0962219238281,172.22222900390625 534.9105529785156,203.93446350097656 552.9616394042969,156.86705017089844 510.6924591064453,129.39886474609375 561.0343322753906,132.0218505859375 574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#000000"
        stroke-width="15"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_stoke_fill_color #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#bf0000"
        id="svg_1"
        orient="point"
        point="5"
        points="574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 637.5,129.39886474609375 595.2308044433594,156.86705017089844 613.2818908691406,203.93446350097656 574.0962219238281,172.22222900390625 534.9105529785156,203.93446350097656 552.9616394042969,156.86705017089844 510.6924591064453,129.39886474609375 561.0343322753906,132.0218505859375 574.0962219238281,83.33333587646484 587.1581115722656,132.0218505859375 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#0000bf"
        stroke-width="15"
      ></polygon>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_star_change_sides #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <polygon
        cx="300"
        cy="150"
        fill="#bf0000"
        id="svg_1"
        orient="point"
        point="6"
        points="575.9783673967634,70.14305132911319 587.0894785078744,117.56470902279233 633.713394315726,103.47638466244652 598.2005896189855,136.80971799577986 633.713394315726,170.14305132911318 587.0894785078744,156.0547269687674 575.9783673967634,203.47638466244655 564.8672562856523,156.0547269687674 518.2433404778008,170.14305132911323 553.7561451745412,136.80971799577986 518.2433404778008,103.47638466244652 564.8672562856523,117.56470902279233 575.9783673967634,70.14305132911319 587.0894785078744,117.56470902279233 "
        r="66.67"
        r2="22.22"
        radialshift="0"
        shape="star"
        starradiusmultiplier="3"
        stroke="#0000bf"
        stroke-width="15"
      ></polygon>
    </g>
  </svg>
</body>
`;
